# mdbook-webinclude

./: Cargo.toml  README.md
.github/workflows/: release-tag.yml
src/: main.rs  utils.rs  webinclude.rs
test_book/: book.toml  example.txt
test_book/src/: README.md
