[package]
name = "mdbook-webinclude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = "4.4.4"
log = "0.4.20"
mdbook = "0.4.34"
once_cell = "1.18.0"
regex = "1.9.5"
semver = "1.0.18"
serde_json = "1.0.107"
toml = "0.5.11"
ureq = "2.7.1"
url = "2.4.1"
